--- a/gtk-3.0/widgets/_header-bars.scss
+++ b/gtk-3.0/widgets/_header-bars.scss
@@ -257,8 +257,8 @@ headerbar {
     margin-bottom: 5px;
   }
   switch {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
   separator { background: transparent; }
 
